# mtproto-server-rust

./: Cargo.toml  LICENSE  README.md  config.toml  install.sh  uninstall.sh
release/: mtproxy
src/: config.rs  crypto.rs  fake_tls.rs  handshake.rs  main.rs  proxy.rs  replay.rs  telegram.rs  tg_mtg.rs
