[package]
name = "mtproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mtproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
bytes = "1"
lru = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
